objects/QuoteLineItemApproval__c.object
<CustomObject>
    <fields>
        <fullName>AHGProductLineReadyforApproval__c</fullName>
        <formula>QuoteLineItem__r.AHGProductLineReadyforApproval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG - Product Line Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AHGProduct__c</fullName>
        <formula>QuoteLineItem__r.AHGProduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AHG_Companion_Products__c</fullName>
        <formula>QuoteLineItem__r.AHG_Companion_Values__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Companion Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHG_Low_Risk_Impactable_Values__c</fullName>
        <formula>QuoteLineItem__r.AHG_Low_Risk_Impactable_Values__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Low Risk Impactable Values</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHG_Outbound_Campaigns__c</fullName>
        <formula>Text( QuoteLineItem__r.AHG_Outbound_Campaigns__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Outbound Campaigns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHG_Outbound_Engagement__c</fullName>
        <formula>QuoteLineItem__r.AHG_Outbound_Engagement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Outbound Engagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHG_Prioritize_wo_PCP__c</fullName>
        <formula>IF(QuoteLineItem__r.AHG_Prioritize_wo_PCP__c = TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Prioritize wo PCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHG_Service_Hours__c</fullName>
        <formula>Text(QuoteLineItem__r.StandardorExtendedServiceHours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Service Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHG_Welcome_Calls__c</fullName>
        <formula>IF(QuoteLineItem__r.AHG_Welcome_Calls__c = TRUE ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AHG Welcome Calls</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANACustomNetworksReadyForApproval__c</fullName>
        <formula>QuoteLineItem__r.ANACustomNetworksReadyForApproval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ANA Custom Networks Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundFurtherExplanation__c</fullName>
        <formula>QuoteLineItem__r.BackgroundFurtherExplanation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Background_Further_Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Product_Line_Ready_for_Approval__c</fullName>
        <formula>QuoteLineItem__r.C3_Product_Line_Ready_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C3 Product Line Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCC_Product__c</fullName>
        <formula>QuoteLineItem__r.CCC_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCC Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMUEligibleForAutoApproval__c</fullName>
        <formula>QuoteLineItem__r.CCMUapprovalconditions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCMU Eligible For Auto Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMUProductLineReadyforApproval__c</fullName>
        <formula>QuoteLineItem__r.CCMUProductLineReadyforApproval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCMU Product Line Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSDMText__c</fullName>
        <formula>QuoteLineItem__r.CSDMText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSDMText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimsPlatform__c</fullName>
        <formula>TEXT(QuoteLineItem__r.Quote.GroupNumber__r.ClaimSystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claims Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <formula>QuoteLineItem__r.Quote.Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicalModel__c</fullName>
        <formula>IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Carved out (exception)&quot;), &quot;Carved out (exception)&quot; , &apos;&apos;) +
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Carved out (exception)&quot;),&apos; ; &apos;,&apos;&apos;)+
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Mercer Health Advantage (MHA)&quot;), &quot;Mercer Health Advantage (MHA)&quot; , &apos;&apos;) +
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Mercer Health Advantage (MHA)&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;IHM&quot;), &quot;IHM&quot;,&apos;&apos;) +
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;IHM&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Local&quot;), &quot;Local&quot;,&apos;&apos;) +
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Local&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;National CCM&quot;), &quot;National CCM&quot;, &apos;&apos;) +
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Total Health Total You (THTY)&quot;), &quot;Total Health Total You (THTY)&quot;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreClinicalProducts__c</fullName>
        <formula>QuoteLineItem__r.Core_and_Clinical_Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CoreClinicalProducts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerServiceDeliveryModel__c</fullName>
        <formula>IF( INCLUDES(QuoteLineItem__r.CustomerServiceDeliveryModel__c, &quot;Carved out (exception)&quot;) , &quot;Carved out (exception)&quot;, &apos;&apos;)+
IF(INCLUDES(QuoteLineItem__r.CustomerServiceDeliveryModel__c, &quot;Carved out (exception)&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.CustomerServiceDeliveryModel__c , &quot;Standard Customer Service&quot;), &quot;Standard Customer Service&quot; ,&apos;&apos;) +
IF(INCLUDES(QuoteLineItem__r.CustomerServiceDeliveryModel__c, &quot;Standard Customer Service&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.CustomerServiceDeliveryModel__c , &quot;Anthem Health Guide&quot;), &quot;Anthem Health Guide&quot; ,&apos;&apos;) +
IF(INCLUDES(QuoteLineItem__r.CustomerServiceDeliveryModel__c, &quot;Anthem Health Guide&quot;),&apos; ; &apos;,&apos;&apos;)+


IF(INCLUDES( QuoteLineItem__r.CustomerServiceDeliveryModel__c , &quot;Mercer Health Advantage (MHA)&quot;), &quot;Mercer Health Advantage (MHA)&quot; ,&apos;&apos;) +
IF(INCLUDES(QuoteLineItem__r.CustomerServiceDeliveryModel__c, &quot;Mercer Health Advantage (MHA)&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.CustomerServiceDeliveryModel__c , &quot;IHM&quot;), &quot;IHM&quot; ,&apos;&apos;) +
IF(INCLUDES(QuoteLineItem__r.CustomerServiceDeliveryModel__c, &quot;IHM&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.CustomerServiceDeliveryModel__c , &quot;National CCM&quot;), &quot;National CCM&quot;,&apos;&apos;)+
IF(INCLUDES(QuoteLineItem__r.CustomerServiceDeliveryModel__c, &quot;National CCM&quot;),&apos;&apos;,&apos;&apos;)</formula>
        <label>Customer Service Delivery Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <formula>QuoteLineItem__r.Quote.Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EngageProductsPurchased__c</fullName>
        <formula>QuoteLineItem__r.Which_Engage_Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EngageProductsPurchased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedMembership__c</fullName>
        <formula>TEXT(QuoteLineItem__r.Members__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Membership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOO_Comments__c</fullName>
        <formula>QuoteLineItem__r.Full_Opt_Out_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOO Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <formula>TEXT(QuoteLineItem__r.Financing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Opt_Out__c</fullName>
        <formula>Text(QuoteLineItem__r.FullOptOut__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Opt-Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHMProductLineReadyforApproval__c</fullName>
        <formula>QuoteLineItem__r.IHMProductLineReadyforApproval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IHM Product Line Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AHG_Product_Line_Ready_for_Approval__c</fullName>
        <formula>QuoteLineItem__r.LG_AHG_Product_Line_Ready_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG AHG - Product Line Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Clinical_Model__c</fullName>
        <formula>IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;IHM&quot;), &quot;IHM&quot;,&apos;&apos;) +
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;IHM&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Local&quot;), &quot;Local&quot;,&apos;&apos;) +
IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Local&quot;),&apos; ; &apos;,&apos;&apos;)+

IF(INCLUDES( QuoteLineItem__r.ClinicalDeliveryModel__c , &quot;Total Health Total You (THTY)&quot;), &quot;THTY&quot;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG Clinical Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Product_Eligible_for_Auto_Approval__c</fullName>
        <formula>QuoteLineItem__r.LG_Product_Eligible_for_Auto_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG Product Eligible for Auto-Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Likelihoodofwinning__c</fullName>
        <formula>TEXT(QuoteLineItem__r.Probability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likelihood of winning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MHA_Product_Line_Ready_for_Approval__c</fullName>
        <formula>QuoteLineItem__r.MHA_Product_Line_Ready_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MHA Product Line Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Situs_State__c</fullName>
        <description>This field is used to retrieve the Situs State from Account.</description>
        <formula>TEXT(QuoteLineItem__r.Quote.Opportunity.Account.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedManagementPlatform__c</fullName>
        <formula>TEXT(QuoteLineItem__r.MedicalManagementPlatform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Med Management Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neworexisting__c</fullName>
        <formula>TEXT(QuoteLineItem__r.OppType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New or existing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferingPG__c</fullName>
        <formula>TEXT(QuoteLineItem__r.OfferingStandardIHMPGs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OfferingPGs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnsiteClinicVendorName__c</fullName>
        <formula>Text( QuoteLineItem__r.OnsiteClinicVendorName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onsite Clinic Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnsiteClinicsAutoApprove__c</fullName>
        <formula>QuoteLineItem__r.OnsiteClinicsAutoApprove__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onsite Clinics Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnsiteClinicsReadyForApproval__c</fullName>
        <formula>QuoteLineItem__r.OnsiteClinicsProductLineReadyforAp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onsite Clinics Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductLineEligibleforAutoApproval__c</fullName>
        <formula>QuoteLineItem__r.ProductLineEligibleforAutoApproval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Eligible for Auto-approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line_Eligible_ForAutoApprovalMHA__c</fullName>
        <formula>QuoteLineItem__r.Product_Line_Eligible_ForAutoApprovalMHA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Eligible ForAutoApprovalMHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QLI_Product_Name__c</fullName>
        <formula>QuoteLineItem__r.ProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Item Approval</relationshipLabel>
        <relationshipName>Quote_Line_Item_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item_Approval_Status__c</fullName>
        <label>Quote Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>TEXT(QuoteLineItem__r.RecordType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(QuoteLineItem__r.Quote.Opportunity.Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SitusState__c</fullName>
        <formula>TEXT(QuoteLineItem__r.Quote.Opportunity.Account.WGS_Contracting_Situs_State__c) +&apos; / &apos;+ TEXT(QuoteLineItem__r.Quote.Opportunity.Account.NASCO_Contracting_Situs_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs_State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THTYAutoApprove__c</fullName>
        <formula>IF(
AHGProduct__c = TRUE &amp;&amp;
QuoteLineItem__r.Members__c &gt; 1000 &amp;&amp;
Text(QuoteLineItem__r.Funding__c) = &quot;ASO&quot; &amp;&amp;
Text(QuoteLineItem__r.StandardorExtendedServiceHours__c) = &quot;Standard&quot; &amp;&amp;
Text(QuoteLineItem__r.MedicalManagementPlatform__c) = &quot;HRS/WMDS&quot; &amp;&amp;
Text(QuoteLineItem__r.Dedicated800Number__c) = &quot;No&quot; &amp;&amp;
Text(QuoteLineItem__r.MembershipSplitBetweenAHGandNonAHG__c) = &quot;No&quot; &amp;&amp;
QuoteLineItem__r.OpportunityEffectiveDate__c - TODAY() &gt; 134 &amp;&amp;
INCLUDES(QuoteLineItem__r.ClinicalDeliveryModel__c, &quot;Total Health Total You (THTY)&quot;) &amp;&amp;
(INCLUDES(QuoteLineItem__r.CoreClinicalProducts__c, &quot;MyHealth Advantage (Silver or Gold)&quot;) &amp;&amp;
INCLUDES(QuoteLineItem__r.CoreClinicalProducts__c, &quot;Future Moms&quot;) &amp;&amp;
INCLUDES(QuoteLineItem__r.CoreClinicalProducts__c, &quot;24/7 Nurseline&quot;)) &amp;&amp;
INCLUDES(QuoteLineItem__r.CoreClinicalProducts__c, &quot;ConditionCare Core 5 (UM/CM/DM/BH)&quot;) = FALSE, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>THTYAutoApprove</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THTYProduct__c</fullName>
        <formula>QuoteLineItem__r.THTYProduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>THTYProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Vendor_Utilized__c</fullName>
        <formula>IF(Text(QuoteLineItem__r.Travel_Vendor_Utilized__c) = &quot;No&quot;, &quot;No&quot;, IF(Text( QuoteLineItem__r.Travel_Vendor__c ) = &quot;Healthbase&quot;, &quot;Healthbase&quot;,QuoteLineItem__r.Other_Travel_Vendor__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Vendor Utilized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlFormulaField__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_360, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_360))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UrlFormulaField</label>
        <type>Text</type>
    </fields>
    <label>Quote Line Item Approval</label>
    <nameField>
        <displayFormat>QLIA-{00000}</displayFormat>
        <label>Quote Line Item Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Item Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>